--- a/playground/2.vue-way.html
+++ b/playground/2.vue-way.html
@@ -17,6 +17,7 @@
     //   // 정의할 내용
     // })
 
+    //<<<<<<<<<<<<<<<< 코드 라이브러리화 하기 >>>>>>>>>>>>>>>>>>>>
     (function() {
       function init() {
         Object.defineProperty(viewModel, 'str', {
