--- a/playground/5.props.html
+++ b/playground/5.props.html
@@ -10,7 +10,7 @@
   <div id="app">
     <!-- <app-header v-bind:프롭스 속성 이름="상위 컴포넌트의 데이터 이름"></app-header> -->
     <app-header v-bind:propsdata="message"></app-header>
-    <app-content v-bind:propsdata="num"></app-content>
+    <app-content v-bind:pdata="num"></app-content>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -20,8 +20,8 @@
       props: ['propsdata']
     }
     var appContent = {
-      template: '<div>{{ propsdata }}</div>',
-      props: ['propsdata']
+      template: '<div>{{ pdata }}</div>',
+      props: ['pdata']
     }
 
     new Vue({
