--- a/playground/1.web-dev.html
+++ b/playground/1.web-dev.html
@@ -8,10 +8,13 @@
 </head>
 <body>
   <div id="app"></div>
+  <div id="app1"></div>
 
   <script>
     // console.log(div);
     var div = document.querySelector('#app');
+    console.log(div)
+
     var str = 'hello world';
     div.innerHTML = str;
 
